# opengl-starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/shaders/: test.frag.glsl  test.vert.glsl
cmake/: CPM.cmake  FindTargets.cmake  MakeFolder.cmake  Packages.cmake
src/: CMakeLists.txt  main.cpp
